macros/tests/02-not-empty-enum.stderr
error: not an empty enum
 --> tests/02-not-empty-enum.rs:4:10
  |
4 | pub enum FooCodes {
  |          ^^^^^^^^

error: not an empty enum
  --> tests/02-not-empty-enum.rs:10:12
   |
10 | pub struct BarCodes;
   |            ^^^^^^^^
